# sun

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  SEMANTIC_ANALYSIS.md  TODO.md  agents.md  build.sh  hello.sun
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: agents.md  copilot-instructions.md
.github/workflows/: build-deb.yml  ci.yml  docs.yml
debian/: control  copyright  install  rules
docs/: .gitignore  next.config.mjs  package-lock.json  package.json  theme.config.tsx
docs/pages/: _meta.json  architecture.mdx  builtin-types.mdx  classes.mdx  control-flow.mdx  enums.mdx  errors.mdx  functions.mdx  generics.mdx  getting-started.mdx  index.mdx  interfaces.mdx  intrinsics.mdx  match.mdx  matrices.mdx  modules.mdx  overview.mdx  ownership.mdx  stdlib.mdx  threads.mdx
examples/: .gitignore
examples/class_destructor/: main.sun
examples/tcp_connection/: .gitignore  README.md  build.sh  listener.sun  main.sun  talker.sun
examples/transitive_moons/: README.md  build.sh  main.sun
extensions/vscode-sun/: .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
include/: ast.h  ast_cache.h  ast_deserializer.h  ast_serializer.h  codegen.h  codegen_visitor.h  compiler.h  config.h  driver.h  error.h  execution_utils.h  interpolated_string_parser.h  intrinsics.h  lexer.h  library_cache.h  llvm_type_resolver.h  metadata_extractor.h  module_linker.h  module_types.h  moon.h  moon_import.h  nfa.h  parser.h  position.h  qualified_name.h  semantic_analyzer.h  semantic_scope.h  source_manager.h  struct_names.h  sun_jit.h  sun_path.h  sun_value.h  thread_utils.h  types.h
include/ast/: analysis.h  analysis.proto  array_index_ast.h  array_literal_ast.h  ast.proto  ast_common.h  ast_fwd.h  ast_utils.h  binary_expr_ast.h  block_expr_ast.h  bool_literal_ast.h  break_ast.h  call_expr_ast.h  class_definition_ast.h  continue_ast.h  declare_type_ast.h  enum_definition_ast.h  expr_ast.h  for_expr_ast.h  for_in_expr_ast.h  function_ast.h  generic_call_ast.h  if_expr_ast.h  import_ast.h  import_scope_ast.h  index_ast.h  indexed_assignment_ast.h  interface_definition_ast.h  lambda_ast.h  manifest_ast.h  match_expr_ast.h  member_access_ast.h  member_assignment_ast.h  module_ast.h  moon_scope_ast.h  null_literal_ast.h  number_expr_ast.h  pack_expansion_ast.h  prototype_ast.h  qualified_name_ast.h  (+17 more)
include/borrow_checker/: borrow_checker.h  borrow_state.h  lifetime.h  loan.h
include/debug/: ast_dot_generator.h  scope_tree_generator.h
include/intrinsics/: atomic.h  generic.h  intrinsics.h  io.h  memory.h  network.h  print.h
include/moon/: moon.h  moon.proto
manual_tests/: a.sun  b.sun  build_test.sh  foo.sun  test.sun
scripts/: build-deb.sh  build-extension.sh  docs-dev.sh
src/: ast.cpp  ast_cache.cpp  ast_dot_generator.cpp  driver.cpp  interpolated_string_parser.cpp  library_cache.cpp  llvm_type_resolver.cpp  main.cpp  metadata_extractor.cpp  module_linker.cpp  module_types.cpp  moon.cpp  parser.cpp  qualified_name.cpp  semantic_analyzer.cpp
src/ast/: array_index_ast.cpp  array_literal_ast.cpp  binary_expr_ast.cpp  block_expr_ast.cpp  bool_literal_ast.cpp  break_ast.cpp  call_expr_ast.cpp  class_definition_ast.cpp  continue_ast.cpp  declare_type_ast.cpp  enum_definition_ast.cpp  expr_ast.cpp  for_expr_ast.cpp  for_in_expr_ast.cpp  function_ast.cpp  generic_call_ast.cpp  if_expr_ast.cpp  import_ast.cpp  import_scope_ast.cpp  index_ast.cpp  indexed_assignment_ast.cpp  interface_definition_ast.cpp  lambda_ast.cpp  match_expr_ast.cpp  member_access_ast.cpp  member_assignment_ast.cpp  module_ast.cpp  null_literal_ast.cpp  number_expr_ast.cpp  pack_expansion_ast.cpp  prototype_ast.cpp  qualified_name_ast.cpp  reference_creation_ast.cpp  return_expr_ast.cpp  slice_expr_ast.cpp  spawn_expr_ast.cpp  string_literal_ast.cpp  this_expr_ast.cpp  throw_expr_ast.cpp  try_catch_expr_ast.cpp  (+7 more)
src/borrow_checker/: borrow_checker.cpp  borrow_state.cpp
src/codegen/: arrays.cpp  block_expressions.cpp  call_expressions.cpp  classes.cpp  codegen_visitor.cpp  error_handling.cpp  functions_lambdas.cpp  if_expressions.cpp  intrinsics.cpp  loops.cpp  match_expressions.cpp  (+6 more)
stdlib/: allocator.sun  buffer.sun  contiguous_buffer.sun  errors.sun  io.sun  linked_list.sun  map.sun  math.sun  matrix.sun  mutex.sun  networking.sun  print.sun  simple_math.sun  slice.sun  stdlib.sun  string.sun  unique.sun  vec.sun
tests/: CMakeLists.txt  test_allocator.cpp  test_arithmetic.cpp  test_arrays.cpp  test_binops.cpp  test_bitwise.cpp  test_borrow_checker.cpp  test_classes.cpp  test_compilation.cpp  test_contiguous_buffer.cpp  test_debug.cpp  test_enums.cpp  test_errors.cpp  test_file_io.cpp  test_generic_classes.cpp  test_generic_functions.cpp  test_generic_methods.cpp  test_generic_specializations.cpp  test_interfaces.cpp  test_interpolation.cpp  test_intrinsics.cpp  test_linked_list.cpp  test_logical.cpp  test_loops.cpp  test_map.cpp  test_match.cpp  test_matrix.cpp  test_memory_safety.cpp  test_modules.cpp  test_mutex.cpp  test_parser.cpp  test_pointers.cpp  test_programs.cpp  test_refs.cpp  test_regex_parser.cpp  test_serialization.cpp  test_stdlib_linked_list.cpp  test_stdlib_math.cpp  test_string.cpp  test_sun_io.cpp  (+2 more)
tests/programs/: class_x_part_a.sun  class_x_part_b.sun  global_var.sun  helper_module.sun  import_math.sun  import_multi_func.sun  import_transitive.sun  import_two_modules.sun  math_module.sun  minimal_import_a.sun  minimal_import_b.sun  minimal_import_main.sun  reversed_mods_AB.sun  reversed_mods_BA.sun  same_mod_a.sun  same_mod_b.sun  submod_fn_calls_mod_fn.sun  test_extend_class.sun  test_precompiled.sun  uses_math.sun
tests/programs/diamond/: a.sun  b_v1.sun  b_v2.sun  base.sun  base_class.sun  base_var.sun  c.sun  diamond_sun.sun  diamond_test.sun  foo.sun  left.sun  left_class.sun  left_var.sun  right.sun  right_class.sun  right_var.sun
tests/programs/merged/: main.sun  module_a.sun  module_b.sun  nested_module_main.sun  same_module_main.sun  submod_main.sun
tests/programs/moon_libs/: box.sun
(+27 files in other folders)
